--- a/AspNet.Core.Common/AspNet.Core.Common.csproj
+++ b/AspNet.Core.Common/AspNet.Core.Common.csproj
@@ -2,6 +2,22 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageId>AspNetCore.Repository.Common</PackageId>
+    <Authors>Md. Nahid Hasan</Authors>
+    <Product>Latest</Product>
+    <Description>This is a common library for AspNet.Core.Repository</Description>
+    <Copyright>Copyright (c) 2018</Copyright>
+    <PackageProjectUrl>https://github.com/nahidhasanswe/AspCore-Repository</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/nahidhasanswe/AspCore-Repository</RepositoryUrl>
+    <RepositoryType />
+    <PackageTags>Repository, Generic, AspCore, Core, Net</PackageTags>
+    <PackageReleaseNotes>This is common functionality for Generic Repository</PackageReleaseNotes>
+    <NeutralLanguage>en</NeutralLanguage>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+  </ItemGroup>
 
 </Project>
