--- a/AspNet.Core.Common/AspNet.Core.Common.csproj
+++ b/AspNet.Core.Common/AspNet.Core.Common.csproj
@@ -6,7 +6,7 @@
     <PackageId>AspNetCore.Repository.Common</PackageId>
     <Authors>Md. Nahid Hasan</Authors>
     <Product>Latest</Product>
-    <Description>This is a common library for AspNet.Core.Repository</Description>
+    <Description>This is a common library for AspNetCore.Repository</Description>
     <Copyright>Copyright (c) 2018</Copyright>
     <PackageProjectUrl>https://github.com/nahidhasanswe/AspCore-Repository</PackageProjectUrl>
     <RepositoryUrl>https://github.com/nahidhasanswe/AspCore-Repository</RepositoryUrl>
@@ -14,6 +14,7 @@
     <PackageTags>Repository, Generic, AspCore, Core, Net</PackageTags>
     <PackageReleaseNotes>This is common functionality for Generic Repository</PackageReleaseNotes>
     <NeutralLanguage>en</NeutralLanguage>
+    <Version>2.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
