--- a/AspNet.Core.Repository/AspNet.Core.Repository.csproj
+++ b/AspNet.Core.Repository/AspNet.Core.Repository.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>Md. Nahid Hasan</Authors>
-    <Product>latest</Product>
+    <Product>Latest</Product>
     <Description>This is generic reposiory for Entity Framework Core. This is awesome repository for database operation based on EF</Description>
     <Copyright>Copyright (c) 2018</Copyright>
     <PackageProjectUrl>https://github.com/nahidhasanswe/AspCore-Repository</PackageProjectUrl>
@@ -12,10 +12,11 @@
     <PackageTags>Repository, AspNet Core, Core, AspNet</PackageTags>
     <PackageReleaseNotes>This is generic reposiory for Entity Framework Core. This is awesome repository for database operation based on EF</PackageReleaseNotes>
     <NeutralLanguage>en</NeutralLanguage>
+    <Version>2.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AspNetCore.Repository.Common" Version="1.0.0" />
+    <PackageReference Include="AspNetCore.Repository.Common" Version="2.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.1.3">
