--- a/AspNetCore.Sample.Service/AspNetCore.Sample.Service.csproj
+++ b/AspNetCore.Sample.Service/AspNetCore.Sample.Service.csproj
@@ -9,14 +9,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AspNet.Core.UnitOfWork" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.1.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.1.4" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\AspNet.Core.UnitOfWork\AspNet.Core.UnitOfWork.csproj" />
   </ItemGroup>
 
 </Project>
